# module-python

./: .gitlab-ci.yml  CMakeLists.txt  README.md  qore-python-module.spec
docs/: mainpage.dox.tmpl
src/: JavaLoader.cpp  JavaLoader.h  ModuleNamespace.cpp  ModuleNamespace.h  PythonCallableCallReferenceNode.cpp  PythonCallableCallReferenceNode.h  PythonQoreCallable.cpp  PythonQoreCallable.h  PythonQoreClass.cpp  PythonQoreClass.h  QC_PythonProgram.h  QC_PythonProgram.qpp  QoreLoader.cpp  QoreLoader.h  QoreMetaPathFinder.cpp  QoreMetaPathFinder.h  QorePyModuleDef.h  QorePythonClass.cpp  QorePythonClass.h  QorePythonExternalProgramData.cpp  QorePythonExternalProgramData.h  QorePythonPrivateData.h  QorePythonProgram.cpp  QorePythonProgram.h  QorePythonStackLocationHelper.cpp  QorePythonStackLocationHelper.h  QoreThreadAttachHelper.h  python-module.cpp  python-module.h  python310_internals.h  python311_internals.h  python36_internals.h  python37_internals.h  python38_internals.h  python39_internals.h  python_internals.h  qoreloadermodule.cpp  qoremodule.cpp
test/: python.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
